2024-01-27T08:07:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7677354858 # 61
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-27
* notice: last 14d: unq all: 3 4
* notice: prev accum: outdated-unq outdated-all / unq all: 159 224 / 164 229
* notice: next accum: outdated-unq outdated-all / unq all: 160 225 / 164 229
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-13] / []

2024-01-26T00:28:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7662232517 # 57
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-26
* notice: last 14d: unq all: 4 5
* notice: prev accum: outdated-unq outdated-all / unq all: 158 223 / 164 229
* notice: next accum: outdated-unq outdated-all / unq all: 159 224 / 164 229
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-11] / []

2024-01-24T00:30:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7633654270 # 51
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-24
* notice: last 14d: unq all: 5 6
* notice: prev accum: outdated-unq outdated-all / unq all: 158 223 / 163 228
* notice: next accum: outdated-unq outdated-all / unq all: 158 223 / 164 229
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-23]

2024-01-22T16:07:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7613994648 # 47